# anamnesis-mcp

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: claude-json-snippet.json  settings-json-snippet.json
examples/skill/: SKILL.md
research/: strange-loops.md
scripts/: daily_summary.py  session-summary.sh  session_summary.py
src/anamnesis/: __init__.py  api.py  config.py  daily_note.py  index.py  models.py  paths.py  server.py  store.py  toolslm_utils.py
tests/: conftest.py  test_index.py  test_server.py  test_store.py
