[project]
name = "anamnesis-mcp"
version = "0.1.0"
description = "Un-forgetting for AI — self-referential session memory for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "Andreas", email = "andreas@chaosisnotrandomitisrhythmic.xyz" }]
keywords = ["mcp", "claude", "session-memory", "bm25", "obsidian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "bm25s>=0.2.14",
    "fastmcp>=2.14.5,<3.0",
    "pydantic>=2.0.0",
    "python-frontmatter>=1.1.0",
    "pystemmer>=3.0.0",
    "scipy>=1.17.0",
    "toolslm>=0.3.26",
]

[project.urls]
Homepage = "https://github.com/chaosisnotrandomitisrhythmic/anamnesis-mcp"
Issues = "https://github.com/chaosisnotrandomitisrhythmic/anamnesis-mcp/issues"

[project.scripts]
anamnesis = "anamnesis:run_server"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/anamnesis"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
